updated panel style

--- a/sites/all/themes/commons_origins_lambeth/sass/lambeth-global.scss
+++ b/sites/all/themes/commons_origins_lambeth/sass/lambeth-global.scss
@@ -350,7 +350,7 @@ body.front.not-logged-in #block-system-main .pane-1 .pane-title {
 /* Custom pane style */
 
 .panel-style {
-  @extend %btn-green;
+  @extend %pod;
 }
 
 
