--- a/sites/all/themes/commons_origins_lambeth/css/lambeth-global.css
+++ b/sites/all/themes/commons_origins_lambeth/css/lambeth-global.css
@@ -1,6 +1,6 @@
 /* Extend styles */
 /* line 50, ../sass/_base.scss */
-.panel-style, .commons-sign-up,
+.commons-sign-up,
 .pane-commons-groups-commons-groups-create-group a,
 #quicktabs-container-commons_bw .quicktabs-tabpage .attachment-before > a,
 #quicktabs-container-commons_bw .quicktabs-tabpage .comment-add a,
@@ -24,7 +24,7 @@ form.commons-events-form-float input:hover,
   text-shadow: 1px 1px rgba(0, 0, 0, 0.49);
 }
 /* line 62, ../sass/_base.scss */
-.panel-style:hover, .commons-sign-up:hover,
+.commons-sign-up:hover,
 .pane-commons-groups-commons-groups-create-group a:hover,
 #quicktabs-container-commons_bw .quicktabs-tabpage .attachment-before > a:hover,
 #quicktabs-container-commons_bw .quicktabs-tabpage .comment-add a:hover,
@@ -32,6 +32,25 @@ form.commons-events-form-float input:hover,
 form.commons-events-form-float input:hover,
 .pane-commons-events-commons-events-create-event-link a:hover {
   text-decoration: none;
+}
+
+/* line 67, ../sass/_base.scss */
+.panel-style {
+  background-color: white;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: #e7e2dc 1px 1px 4px;
+  -moz-box-shadow: #e7e2dc 1px 1px 4px;
+  box-shadow: #e7e2dc 1px 1px 4px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+/* line 74, ../sass/_base.scss */
+.lt480 .panel-style {
+  margin-right: 0;
 }
 
 /* line 354, icons/*.png */
