fixed reusable panel style

--- a/sites/all/themes/commons_origins_lambeth/css/lambeth-global.css
+++ b/sites/all/themes/commons_origins_lambeth/css/lambeth-global.css
@@ -35,7 +35,7 @@ form.commons-events-form-float input:hover,
 }
 
 /* line 67, ../sass/_base.scss */
-.panel-style .panel-pane {
+.panel-style {
   background-color: white;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
@@ -49,12 +49,12 @@ form.commons-events-form-float input:hover,
   margin-bottom: 20px;
 }
 /* line 74, ../sass/_base.scss */
-.lt480 .panel-style .panel-pane, .panel-style .lt480 .panel-pane {
+.lt480 .panel-style {
   margin-right: 0;
 }
 
 /* line 79, ../sass/_base.scss */
-.panel-style .panel-pane .block-inner {
+.panel-style .block-inner {
   padding: 10px 10px 20px 10px;
 }
 
@@ -438,13 +438,19 @@ body.front.not-logged-in #block-system-main .pane-1 .pane-title {
 
 /* Custom pane style */
 /* line 357, ../sass/lambeth-global.scss */
-.panel-style .panel-pane h2 {
+.panel-style h2 {
   font-size: 20px;
   color: #666666;
 }
 
+/* line 363, ../sass/lambeth-global.scss */
+#panels-ipe-paneid-16 .panel-style {
+  margin-left: 10px;
+  margin-right: 30px;
+}
+
 /* Update button sty;es */
-/* line 377, ../sass/lambeth-global.scss */
+/* line 382, ../sass/lambeth-global.scss */
 .front.not-logged-in #content {
   background: none;
 }
