fixed margins for re-usable panel style

--- a/sites/all/themes/commons_origins_lambeth/sass/lambeth-global.scss
+++ b/sites/all/themes/commons_origins_lambeth/sass/lambeth-global.scss
@@ -360,7 +360,7 @@ body.front.not-logged-in #block-system-main .pane-1 .pane-title {
   }
 }
 
-#panels-ipe-paneid-16 .panel-style {
+#panels-ipe-regionid-two_66_33_first .panel-style {
   margin-left: 10px;
   margin-right: 30px;
 }
