--- a/sites/all/themes/commons_origins_lambeth/css/lambeth-global.css
+++ b/sites/all/themes/commons_origins_lambeth/css/lambeth-global.css
@@ -444,7 +444,7 @@ body.front.not-logged-in #block-system-main .pane-1 .pane-title {
 }
 
 /* line 363, ../sass/lambeth-global.scss */
-#panels-ipe-paneid-16 .panel-style {
+#panels-ipe-regionid-two_66_33_first .panel-style {
   margin-left: 10px;
   margin-right: 30px;
 }
